# UE-AI-Whitebox-Texturing-System

./: .env.example  .gitignore  AGENTS.md  README.md
deploy/: Dockerfile  README.md  ai-texturing.service  docker-compose.yml  material_palette_env_setup.md  material_palette_setup.md  sam_setup.md  server_setup.md
docs/: README.md  api.md  architecture.md  final_pipeline.md  manifest_schema.md  (+3 more)
server/: README.md  __init__.py  pyproject.toml  requirements.txt
server/app/: __init__.py  config.py  job_manager.py  main.py  schemas.py  storage.py
server/app/api/: routes_downloads.py  routes_health.py  routes_jobs.py  routes_masks.py  routes_pbr.py  routes_reference.py
server/app/processing/: __init__.py  image_utils.py  manifest.py  mask_utils.py  pbr_pack.py  validation.py
server/app/providers/: __init__.py
server/app/providers/mask/: __init__.py  base.py  mock_mask_provider.py  registry.py  sam_provider.py  user_mask_provider.py
server/app/providers/pbr/: __init__.py  base.py  material_palette_provider.py  mock_pbr_provider.py
server/app/providers/reference/: __init__.py  base.py  comfyui_provider.py  config.py  custom_http_provider.py  doubao_provider.py  mock_reference_provider.py  registry.py  template.py  user_upload_provider.py
server/app/workers/: __init__.py  queue.py  tasks.py
server/tests/: conftest.py  helpers.py  png_utils.py  test_api_end_to_end.py  test_jobs.py  test_manifest.py  test_mask_mock.py  test_material_palette_provider.py  test_mock_pbr_provider.py  test_pbr_pack.py  test_reference_http_provider.py  test_reference_mock.py
(+12 files in other folders)
