[project]
name = "ue-ai-texturing-server"
version = "0.1.0"
description = "Mock-first FastAPI server for UE whitebox AI texturing."
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.111,<1.0",
  "uvicorn>=0.30,<1.0",
  "python-multipart>=0.0.9,<1.0",
  "PyYAML>=6.0,<7.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0,<9.0",
  "httpx>=0.27,<1.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
